# dishy

./: .gitignore  README.md
backend/: .gcloudignore  Dockerfile  Dockerfile.bak  app.py  end_to_end.py  pyproject.toml
backend/core/: quick_viewer.py
backend/core/image_generating/: collage.py  constants.py  nanobanana.py  pipeline.py  prompt_template.txt
backend/core/menu_listing/: constants.py  embedding.py  evaluate.ipynb  gemini_calls.py  menu_read_prompt.txt  menuscan.py  pipeline.py  precompute.py  query_vectors.json  schema.py
backend/core/restuarant_overview/: prompt_template.md  restauarnt_summary.py  schema.py
backend/core/review_scraping/: pipeline.py
backend/core/text_review_labeling/: constants.py  embedding.py  gemini_calls.py  menu_summary.py  pipeline.py  prompt_template.txt  schema.py
backend/core/utils/: helpers.py  path_utils.py
frontend/: .dockerignore  Dockerfile  cloudbuild.yaml  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AppBreadcrumb.module.css  AppBreadcrumb.tsx  AppHeader.module.css  AppHeader.tsx  DietaryBadge.module.css  DietaryBadge.tsx  LoadingIndicator.module.css  LoadingIndicator.tsx
frontend/app/home/: Home.module.css  SearchBox.module.css  SearchBox.tsx  page.tsx  search.ts
frontend/app/process/: Process.module.css  page.tsx  pipeline.ts
frontend/app/results/: Card.module.css  Results.module.css  page.tsx  results.ts
frontend/app/store/: useStore.ts
frontend/components/ui/: sonner.tsx
(+4 files in other folders)
